<resources>
    <string name="about_details">Made by NADDATEAM (Benjamin Baird, Robert Little, Erik Hoffman and Andrew Huynh). Uses Arduino hardware technology
    with gyroscope and accelerometer data. Made during the CIS3760 course at University of Guelph during the Winter 2015 semester.</string>
    <string name="bicep_curl_tut">Instructions:
1) Stand with feet shoulder width apart and knees slightly bent or sit in upright position.
2) Start position: Grasp DB’s with underhand grip (palms facing forward) and allow arms to hang down at sides. Elbows should be close to sides.
3) Flex at the elbows and curl DB’s up to approximately shoulder level. Keep elbows close to sides throughout movement. This exercise may be done one arm at a time.
4) Return to start position.
5) Remember to keep back and head straight in a neutral position throughout movement. Shoulders should be stabilized by squeezing shoulder blades together slightly - only the elbow joint should be moving.</string>
    <string name="tutDumbChestPress">
        1) Lie back on an incline bench with a dumbbell in each hand atop your thighs. The palms of your hands will be facing each other.\n
        2) Then, using your thighs to help push the dumbbells up, lift the dumbbells one at a time so that you can hold them at shoulder width.\n
        3) Once you have the dumbbells raised to shoulder width, rotate your wrists forward so that the palms of your hands are facing away from you. This will be your starting position.\n
        4) Be sure to keep full control of the dumbbells at all times. Then breathe out and push the dumbbells up with your chest.\n
        5) Lock your arms at the top, hold for a second, and then start slowly lowering the weight. Tip Ideally, lowering the weights should take about twice as long as raising them.
        6) Repeat the movement for the prescribed amount of repetitions.\n
        7) When you are done, place the dumbbells back on your thighs and then on the floor. This is the safest manner to release the dumbbells.
    </string>
    <string name="title_calibActionCountdown">Countdown</string>
    <string name="title_calibActionStatus">Status</string>
    <string name="title_calibActionConfirm">Confirm</string>
    <string name="title_calibActionHelp">Help</string>
    <string name="title_calibActionStart">Calibrate</string>
    <string name="title_calibActionStop">Stop Calibrating</string>
    <string name="title_activity_workout0">workout0</string>
    <string name="title_activity_bicep_curl">Bicep Curls</string>
    <string name="title_activity_restore_def_nav">Restore to Defaults</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings_help_nav">Help</string>
    <string name="title_activity_audio_nav">Audio</string>
    <string name="title_activity_bicep_curl_tut">Bicep Curls</string>
    <string name="title_activity_chest_tut">Chests</string>
    <string name="title_activity_squats_tut">Squats</string>
    <string name="title_activity_make_workout_tut">Create Work Tutorial</string>
    <string name="title_activity_user_details_nav">User Details</string>
    <string name="title_activity_activity_blue_test">activity_blue_test</string>
    <string name="title_activity_blue_test">BlueTest</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_drawer">Menu</string>
    <string name="title_activity_calibrations">Calibrations</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_activity_title_bar">titleBar</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="title_activity_how_calib_tut">How to Calibrate</string>
    <string name="title_activity_track_stats_nav">Past Statistics</string>
    <string name="title_activity_custom_work_nav">Custom Workouts</string>
    <string name="title_activity_calibration_action">Calibrate</string>
    <string-array name="settingsListItems">
     
        <item>Reset to Defaults</item>
        <item>Help</item>
        <item>Bluetooth</item>
        <item>About</item>
    </string-array>
    <string-array name="dummyList">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>
    <string-array name="ChestAndTriceps">
        <item>Dumbbell Chest Press</item>
        <item>Incline Bench Press</item>
        <item>Dumbbell Flies</item>
        <item>Incline Flies</item>
        <item>Skull Crushers</item>
        <item>Dips</item>
        <item>Tricep Kickback</item>
    </string-array>
    <string-array name="Legs">
        <item>Squats</item>
        <item>Front Squats</item>
        <item>Leg Extensions</item>
        <item>Hamstring Curls</item>
        <item>Lying Hamstring Curls</item>
    </string-array>
    <string-array name="BackAndBiceps">
        <item>Deadlifts</item>
        <item>Bentover Rows</item>
        <item>Wide Grip Pullbar</item>
        <item>Cable Rows</item>
        <item>Dumbbell Bicep Curls</item>
        <item>Barbell Bicep Curls</item>
        <item>Spider Curls</item>
    </string-array>
    <string-array name="Shoulders">
        <item>Shoulder Press</item>
        <item>Lateral Raises</item>
        <item>Reverse Flies</item>
        <item>Upright Barbell Rows</item>
    </string-array>
    <string-array name="calibrationItemsArr">
        <item>Chest and Triceps Curl</item>
        <item>Legs</item>
        <item>Back and Biceps</item>
        <item>Shoulders</item>
    </string-array>
    <string-array name="audioListItems">
        <item>Workout Beep</item>
        <item>Haptic Feedback</item>
    </string-array>
    <string-array name="helpListItems">
        <item>Exercise Form</item>
        <item>Tests</item>
    </string-array>
    <string-array name="restoreItemsArr">
        <item>Clear Calibrations</item>
        <item>Clear User Information</item>
        <item>Clear Workout History</item>
        <item>Reset Entire App</item>
    </string-array>
    <string-array name="userListItems">
        <item>User Details</item>
        <item>Tracked Statistics</item>
        <item>Custom Workouts</item>
    </string-array>
    <string-array name="userDetailsListItems">
        <item>First Name</item>
        <item>Last Name</item>
        <item>Gender</item>
        <item>Age</item>
        <item>Height (cm)</item>
        <item>Weight (kg)</item>
        <item>Email</item>
        <item>User Id</item>
    </string-array>
    <string name="app_name">TruForm</string>
    <string name="action_settings">Thanks for using Truform</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search...</string>
    <string name="welcomeString">Welcome</string>
    <string name="userString">User</string>
    <string name="workoutString">Workout</string>
    <string name="homeString">Home</string>
    <string name="calibrationsString">Calibrations</string>
    <string name="customWorkoutString">Create Workout</string>
    <string name="socialNetString">Social Networks</string>
    <string name="social_twitterString">Twitter</string>
    <string name="social_facebookString">Facebook</string>
    <string name="settingString">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">T</string>
    <string name="app_nameB">nRF UART v2.0</string>
    <string name="device">Device:</string>
    <string name="no_device">Select a device</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId"> ManufactureId</string>
    <string name="BatteryLevel"> Battery Level</string>
    <string name="OrgId"> OrganizationId</string>
    <string name="Txpower"> Txpower Level</string>
    <string name="Noupdate"> No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit nRF UART?</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_workout__history">Workout_History</string>
    <string name="title_activity_get_data_nav">GetDataNav</string>
    <string name="hello">Hello, </string>
    <string name="login_instructions">Login to twiter</string>
    <string name="share_instructions">Enter share message</string>
    <string name="btn_login">Login to Twitter</string>
    <string name="btn_share">Share</string>
    <string name="twitter_callback">http://javatechig.android.app</string>
    <string name="twitter_consumer_key"> USQPXbZUQRBJfZFMVAGX5HUgQ</string>
    <string name="twitter_consumer_secret">kRVpBkZFbspYJ3ncNGypWBREPFE4VIQuJqAdcQBKfaQCPd9NLP</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
</resources>