<?xml version="1.0" encoding="UTF-8"?>

<!-- Copyright (C) 2013 The Android Open Source Project Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. -->

<!--CIS3760-->
<!--Naddateam Truform-->
<!--dis_values.xml-->
<!--Source: https://developer.mbed.org/forum/wiki-16691-forum/topic/5134/-->
<!--Last Modified by: Rob Little-->
<!--This File is used to display information about the users phone-->

    <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="match_parent" android:layout_width="fill_parent" android:text="@string/SystemId" android:id="@+id/SystemId"> </TextView>

    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/ManufactureId" android:id="@+id/ManufactureId"> </TextView>

    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/OrgId" android:id="@+id/OrgId"> </TextView>

    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/ModelNumber" android:id="@+id/ModelNumber"> </TextView>

    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/SerialNumber" android:id="@+id/SerialNumber"> </TextView>

    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/FirmwareRevision" android:id="@+id/FirmwareRevision"> </TextView>

    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/HardwareRevision" android:id="@+id/HardwareRevision"> </TextView>

    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/SoftwareRevision" android:id="@+id/SoftwareRevision"> </TextView>

    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/ManufactureName" android:id="@+id/ManufactureName"> </TextView>

    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/RegCertDataList" android:id="@+id/RegCertDataList"> </TextView>

    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/BatteryLevel" android:id="@+id/BatteryLevel"> </TextView>

</LinearLayout>