<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="naddateam.truform.GUI.GUI.SettingsItems.CalibrationPkg.CalibrationAction"
    android:background="#16a085">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_calibActionCountdown"
        android:gravity="center"
        android:id="@+id/calibActionCountdown"
        android:textSize="50dp"
        android:background="#f1c40f"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_calibActionStatus"
        android:id="@+id/calibActionStatus"
        android:textSize="45dp"
        android:gravity="center"
        android:layout_below="@+id/calibActionCountdown"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:textColor="#ecf0f1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_calibActionStart"
        android:id="@+id/calibActionStart"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_calibActionHelp"
        android:id="@+id/calibActionHelp"
        android:gravity="center"
        android:layout_below="@+id/calibActionStart"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_calibActionConfirm"
        android:id="@+id/calibActionConfirm"
        android:gravity="center"
        android:layout_below="@+id/calibActionHelp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_calibActionStop"
        android:id="@+id/calibActionStop"
        android:gravity="center"
        android:layout_above="@+id/calibActionHelp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />
</RelativeLayout>
